@@ -1,3 +1,7 @@
+Major changes in 3.26.4:
+* Fix timezones in Month view (Michael Catanzaro)
+* Updated translations for many languages.
+
 Major changes in 3.26.3:
 * Fix time in tooltip text (Michael Catanzaro)
 * Fix timezones (Michael Catanzaro)
